Fix checkbox alignment. Same background on hover in search and editor. Fix inspireTheme icon if only one theme. Same abstract layout in list and grid mode.

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_editor_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_editor_default.less
@@ -8,7 +8,8 @@
     font-weight: 500;
   }
   tr:hover {
-    background-color: #eee;
+    background-color: @panel-footer-bg;
+    transition: background-color ease 0.5s;
   }
 }
 
